fix mobile view codeblock overflow (#1)

--- a/theme/components/feature-demo/index.module.scss
+++ b/theme/components/feature-demo/index.module.scss
@@ -38,6 +38,7 @@
 .codeWrapper {
   flex: 1.2;
   min-width: 0;
+  max-width: 100%;
 }
 
 @media screen and (max-width: 768px) {
